ParallelJava: mentions reflection and modules and clarifies problems